--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width>, initial-scale=1.0">
+<title>Números de 1 a 100</title>
 </head>
 <body>
-    <script src="quest3.js"></script>
+  <h2>1 até 100:</h2>
+  <script>
+    for (var i = 1; i <= 100; i++) {
+      document.write( + i + "<br>");//br quebra linha para o  umero aparecer um abaixo do outro.
+    }
+  </script>
 </body>
 </html>
